# pea_zad2_branch_and_bound_rnn_ub

./: CMakeLists.txt  JAK_KOMPILOWAC_JAK_URUCHOMIC.txt  README.md
config/: 00_test_read.txt  01_single_bb_bfs_atsp_matrix6.txt  02_single_bb_dfs_atsp_matrix6.txt  03_single_bb_lc_atsp_matrix6.txt  04_single_bb_bfs_tsp_example.txt  05_single_bb_dfs_tsp_example.txt  06_single_bb_lc_tsp_example.txt  09_random_benchmark_tsp.txt  10_random_benchmark_atsp.txt  11_tsplib_benchmark_tsp.txt  12_tsplib_benchmark_atsp.txt  13_compare_ub_random_tsp.txt  14_compare_ub_random_atsp.txt  tsplib_atsp_list.txt  tsplib_tsp_list.txt
include/: BranchAndBoundNode.h  BranchAndBoundSolver.h  CSVWriter.h  Config.h  FileReader.h  Generator.h  InstanceListReader.h  LowerBound.h  MemoryUsage.h  OptTourReader.h  RNNSolver.h  TSPInstance.h  TourUtils.h
results/random_benchmarks/: random_atsp.csv  random_tsp.csv
results/tsplib_benchmarks/: tsplib_atsp.csv  tsplib_tsp.csv
results/ub_comparison/: compare_ub_random_atsp.csv  compare_ub_random_tsp.csv
src/: BranchAndBoundSolver.cpp  CSVWriter.cpp  Config.cpp  FileReader.cpp  Generator.cpp  InstanceListReader.cpp  LowerBound.cpp  MemoryUsage.cpp  OptTourReader.cpp  RNNSolver.cpp  TourUtils.cpp  main.cpp
